[gd_scene load_steps=21 format=3 uid="uid://hnhkdcd7yov"]

[ext_resource type="Script" path="res://VFX/poisenSpitAttack/SpitPool.gd" id="1_1bue2"]
[ext_resource type="Shader" path="res://VFX/shaders/disolve.gdshader" id="2_sc4nj"]
[ext_resource type="Texture2D" uid="uid://1xaowoq6x8jx" path="res://VFX/poisenSpitAttack/images/spit02.png" id="3_pkaf5"]
[ext_resource type="Texture2D" uid="uid://c8fdm500noe5u" path="res://VFX/poisenSpitAttack/images/spit03.png" id="4_mal67"]
[ext_resource type="Texture2D" uid="uid://cjnjq2go438iu" path="res://VFX/poisenSpitAttack/images/spit04.png" id="5_fo3r1"]
[ext_resource type="Texture2D" uid="uid://mjwwxvof0d50" path="res://VFX/poisenSpitAttack/images/spit05.png" id="6_kpyt2"]
[ext_resource type="AudioStream" uid="uid://bks0giv8v5pnb" path="res://VFX/poisenSpitAttack/sounds/StomachGurgle_S011HU.19.wav" id="7_wmy4n"]
[ext_resource type="Texture2D" uid="uid://bdb4a57t13lka" path="res://VFX/textures/fire/fire_shap_smaller.png" id="8_qu8w3"]
[ext_resource type="PackedScene" uid="uid://dj8dsfwvk6oas" path="res://Libraries/CustomComponents/AudioRandomizer.tscn" id="9_21yso"]
[ext_resource type="AudioStream" uid="uid://gnv1aerh85jc" path="res://VFX/Gore/sounds/fleshy_mushiness/big_smashes/ESM_Fat_Zombie_Smash_2_Wet_Smash_Liquid_Bash_Knife_Organic_Splat_Gore_Horror_Explosion.wav" id="10_6hf67"]
[ext_resource type="AudioStream" uid="uid://b6y3i0qo1fsfi" path="res://VFX/Gore/sounds/fleshy_mushiness/big_smashes/SquishSplatBlood_SFXB.1484.wav" id="11_k57cu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ch23p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qo2f3"]
shader = ExtResource("2_sc4nj")
shader_parameter/sensitivity = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kbbru"]
radius = 39.0
height = 136.0

[sub_resource type="Animation" id="Animation_ynf36"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_pkaf5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/sensitivity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("smog:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("particles:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerHitBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_s1v78"]
resource_name = "spit_pool"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_pkaf5"), ExtResource("4_mal67"), ExtResource("5_fo3r1"), ExtResource("6_kpyt2")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/sensitivity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(13.8, 14.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("smog:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 13, 14.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("particles:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.2, 13.2, 14.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3, 14.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_hit_sound"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/5/type = "audio"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AudioRandomizer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_wmy4n")
}],
"times": PackedFloat32Array(0.7)
}
tracks/5/use_blend = true
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerHitBox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 14),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ynpmt"]
_data = {
"RESET": SubResource("Animation_ynf36"),
"spit_pool": SubResource("Animation_s1v78")
}

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_3rcke"]
load_path = "res://.godot/imported/fire_shape_square.png-ffb89d792bcb1311d642fc2e002a4472.ctex"

[sub_resource type="Gradient" id="Gradient_1x788"]
offsets = PackedFloat32Array(0, 0.882897)
colors = PackedColorArray(0.266667, 0.294118, 0.12549, 0.580392, 0.566167, 0.572873, 0.19885, 0.141176)

[sub_resource type="Gradient" id="Gradient_a8saq"]
offsets = PackedFloat32Array(0, 0.882897, 0.976888)
colors = PackedColorArray(0.380392, 0.419608, 0.192157, 1, 0.858824, 0.870588, 0.431373, 1, 0.970293, 0.880353, 0.536616, 1)

[node name="SpitPool_Boss" type="Node2D"]
z_index = 1
material = SubResource("ShaderMaterial_ch23p")
script = ExtResource("1_1bue2")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_qo2f3")
texture = ExtResource("3_pkaf5")

[node name="PlayerHitBox" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitBox"]
position = Vector2(1, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kbbru")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ynpmt")
}

[node name="smog" type="CPUParticles2D" parent="."]
amount = 20
lifetime = 2.71
speed_scale = 5.09
randomness = 0.11
lifetime_randomness = 0.27
texture = SubResource("CompressedTexture2D_3rcke")
emission_shape = 1
emission_sphere_radius = 89.29
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
angular_velocity_min = -4.25
angular_velocity_max = 4.25
scale_amount_min = 0.2
scale_amount_max = 0.4
color_ramp = SubResource("Gradient_1x788")

[node name="particles" type="CPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(-15, 0)
scale = Vector2(1.70695, 1.70695)
speed_scale = 0.73
lifetime_randomness = 0.27
texture = ExtResource("8_qu8w3")
emission_shape = 1
emission_sphere_radius = 45.67
spread = 78.05
gravity = Vector2(2.08165e-12, 2.08165e-12)
orbit_velocity_min = -1.0
orbit_velocity_max = 1.0
scale_amount_min = 0.07
scale_amount_max = 0.2
color_ramp = SubResource("Gradient_a8saq")

[node name="DamageTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioRandomizer" parent="." instance=ExtResource("9_21yso")]
volume_db = -13.102
bus = &"GameAudio"
audio_clips = Array[AudioStreamWAV]([ExtResource("10_6hf67"), ExtResource("11_k57cu")])

[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
